# SnakeySnake

./: .gitignore  Algo1.c  Algo1.h  CMakeLists.txt  draw.c  draw.h  game.c  game.h  main.c
